--- a/Front/src/styles/header.css
+++ b/Front/src/styles/header.css
@@ -1,8 +1,9 @@
-.header{
+.header {
     display: flex;
+
     justify-content: space-between;
-    
+    border-radius: 5px;
     padding: 1rem 2rem;
     width: 100%;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
 }
