--- a/Front/src/styles/calendar.css
+++ b/Front/src/styles/calendar.css
@@ -1,43 +1,66 @@
 /* Change background & text color */
 .react-calendar {
-    background-color: #222;
-    color: #fff;
-    border-radius: 8px;
-    padding: 10px;
-    border: none;
-  }
-  
-  /* Highlight selected range */
-  .react-calendar__tile--active {
-    background: #7F00FF !important;
-    color: white !important;
-    border-radius: 5px;
-  }
-  .react-calendar__navigation {
-    display: flex;
-  }
-  /* Improve hover effect */
-  .react-calendar__tile:hover {
-    background-color: #7F00FF !important;
-    color: rgb(255, 255, 255);
-  }
-  .react-calendar__tile--range {
-    box-shadow: 0 0 1px 1px black;
-  }
-  
-  .react-calendar__tile--now {
-    background: #6600CC;
-    border-radius: 5px;
-  }
-  .react-calendar__tile--now:hover {
-    background: rgb(200, 41, 221) !important;
+  background-color: #222;
+  color: #fff;
+  border-radius: 8px;
+  padding: 10px;
+  border: none;
+  width: 70%;
+  margin: auto;
+}
+
+/* Highlight selected range */
+.react-calendar__tile--active {
+  background: #7F00FF !important;
+  color: white !important;
+  border-radius: 5px;
+}
+
+.react-calendar__navigation {
+  display: flex;
+}
+
+/* Improve hover effect */
+.react-calendar__tile:hover {
+  background-color: #7F00FF !important;
+  color: rgb(255, 255, 255);
+}
+
+.react-calendar__tile--range {
+  box-shadow: 0 0 1px 1px black;
+}
+
+.react-calendar__tile--now {
+  background: #6600CC;
+  border-radius: 5px;
+}
+
+.react-calendar__tile--now:hover {
+  background: rgb(200, 41, 221) !important;
+}
+
+
+
+
+.react-calendar__navigation button:hover {
+  background: #6600CC !important;
+  border-radius: 5px;
+}
+
+#calendarDiv {
+  display: flex;
+  flex-direction: column;
+  max-width: 50vw;
+}
+
+@media screen and (max-width: 900px) {
+  .react-calendar {
+    margin: auto;
+    width: 80%;
   }
 
-  
-  
-  
-  .react-calendar__navigation button:hover {
-    background: #6600CC !important;
-    border-radius: 5px;
+  #calendarDiv {
+    max-width: 100vw;
   }
-  
+
+}
