--- a/Front/src/styles/reservationDiv.css
+++ b/Front/src/styles/reservationDiv.css
@@ -1,3 +1,23 @@
 #reservationDiv {
     width: 50vW;
 }
+.reservations-list {
+    max-height: 300px;
+    overflow-y: auto;
+    padding: 10px;
+}
+
+.reservation-item {
+    background: #7F00FF;
+    padding: 10px;
+    margin: 5px 0;
+    border-radius: 8px;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+}
+@media screen and (max-width: 800px) {
+    #reservationDiv {
+        width: 90vW;
+    }
+    
+    
+}
