--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -5,43 +5,87 @@
   text-align: center;
   position: fixed;
   height: 100%;
+  
+}
+  
+
+body{
+  background-image: url('./assets/IconGrid.svg');
+  background-size: cover; 
+  background-repeat: no-repeat; 
+  background-position: center; 
+}
+.customer1{
+  border-radius: 13% 87% 11% 89% / 88% 12% 88% 12%;
+  width: 350px;
+  height: 300px;
+  border: solid 2px #000000;
+   
+}
+.customer2{
+  border-radius: 85% 15% 83% 17% / 13% 83% 17% 87% ;
+  border: solid 2px #000000;
+  width: 350px;
+  height: 300px;
+   
+}
+.comment{
+  margin-left: 2rem;
+}
+.title{
+  width: 100Vw;
+}
+.app{
+  display: flex;
+  flex-direction: row;
+}
+.row1{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.column1{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50vW;
+}
+.column2{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50vW;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 900px) {
+  .app{
+    display: flex;
+    flex-direction: column;
   }
-
-  to {
-    transform: rotate(360deg);
+  .column1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vW;
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  .column2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vW;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  .row1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  
+  
 }
