--- a/Front/src/styles/reservationInputs.css
+++ b/Front/src/styles/reservationInputs.css
@@ -1,5 +1,6 @@
 #ReservationInputs {
     display: flex;
+    background-color: #242424;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
