--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -14,6 +14,8 @@ body{
   background-size: cover; 
   background-repeat: no-repeat; 
   background-position: center; 
+  background-color: #202020;
+  color: white;
 }
 .customer1{
   border-radius: 13% 87% 11% 89% / 88% 12% 88% 12%;
